# ginjarator

./: .gitignore  conftest.py  pyproject.toml  test  test-e2e
.github/workflows/: test.yaml
ginjarator/: __init__.py  _build.py  _build_test.py  _config.py  _config_test.py  _e2e_test.py  _filesystem.py  _filesystem_test.py  _init.py  _init_test.py  _main.py  _paths.py  _paths_test.py  _python.py  _python_test.py  _template.py  _template_test.py  build.py  build_test.py  config.py  config_test.py  e2e_test.py  filesystem.py  filesystem_test.py  init.py  init_test.py  main.py  paths.py  paths_test.py  python.py  python_test.py  render.py  render_test.py  template.py  template_test.py  testing.py  testing_test.py
