[project]
name = "ginjarator"
version = "0"
requires-python = ">=3.11"
dependencies = [
]

[project.optional-dependencies]
test = [
  "absl-py",
  "black",
  "isort",
  "mypy",
  "pylint",
  "pytest",
  "pytest-cov",
]

[tool.black]
line-length = 80

[tool.coverage.run]
omit = [
  "**/*_test.py",
  "**/conftest.py",
]

[tool.isort]
profile = "google"
skip_gitignore = true
src_paths = ["."]

[tool.mypy]
disallow_any_generics = true
disallow_untyped_defs = true
packages = ["ginjarator"]
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
  "absl.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = """\
  --cov=. \
  --cov-branch \
  --cov-report=term-missing \
  """

[tool.setuptools.packages.find]
include = ["ginjarator", "ginjarator.*"]
