[build-system]
requires = [
  "setuptools",
  "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[project]
name = "ginjarator"
requires-python = ">=3.12"
dependencies = [
  "jinja2",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
  "black",
  "isort",
  "mypy",
  "pylint",
  "pytest",
  "pytest-cov",
]

[project.scripts]
ginjarator = "ginjarator.main:main"

[tool.black]
line-length = 80

[tool.coverage.run]
omit = [
  "**/*_test.py",
]

[tool.coverage.report]
exclude_also = [
  # TODO: https://github.com/nedbat/coveragepy/issues/970 - Remove this.
  '^ *@overload$',
]

[tool.isort]
profile = "google"
skip_gitignore = true
src_paths = ["."]

[tool.mypy]
disallow_any_generics = true
disallow_untyped_defs = true
packages = ["ginjarator"]
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = """\
  --cov=. \
  --cov-branch \
  --cov-report=term-missing \
  """

[tool.setuptools.packages.find]
include = ["ginjarator", "ginjarator.*"]

[tool.setuptools_scm]
local_scheme = "node-and-timestamp"
version_scheme = "no-guess-dev"
